tests/baselines/reference/for-of6.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of6.ts(1,6): error TS2304: Cannot find name 'v'.
tests/cases/conformance/es6/for-ofStatements/for-of6.ts(1,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of6.ts (2 errors) ====
    for (v of [0]) {
         ~
!!! error TS2304: Cannot find name 'v'.
              ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        let v;
    }